# edclass-rs

./: .env  Cargo.toml  README.md
src/lib/api/: auth.rs  basic_auth.rs  course.rs  create_user.rs  enrollment.rs  kid.rs  message.rs  mod.rs  teacher.rs  user.rs
src/lib/common/: constants.rs  course.rs  ds.rs  enrollment.rs  fcm.rs  macros.rs  message.rs  mod.rs  model.rs  srv.rs  user.rs  util.rs
