[package]
name = "edclass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "edclass_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "edclass_bin"
path = "src/bin/bin.rs"

[dependencies]
reqwest = "0.11"
#firebase-auth = "0.9"
#google-authenticator = "4.1"
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
firestore = { version = "0.37.6-alpha.0", git = "https://github.com/abdolence/firestore-rs" }
gcloud-sdk = "0.23.1"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
anyhow = "1.0.77"
actix-web-httpauth = "0.8.1"
futures = "0.3.30"
tokio-stream = "0.1.14"
argonautica = "0.2.0"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
